--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GTA Timers</string>
     <string name="main_logo">Main Logo</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="ingrese_su_usuario">Ingrese su usuario</string>
 </resources>
